#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-82
2016-07-18 Mikhail S. Dubrovin
- GeometryAccess.py - update documentation for skipped methods.

Tag: V00-02-81
2016-07-11 Mikhail S. Dubrovin
- for Epix100 mask two central rows of wide pixels (in addition to two central columns) PSAS-148
M       src/SegGeometryEpix100V1.cpp
M       src/SegGeometryEpix100V1.py

Tag: V00-02-80
2016-06-30 Mikhail S. Dubrovin
- CalibParsStore.h - add support for Ryonix

Tag: V00-02-79
2016-06-23 Christopher O'Grady
assert in CalibFileFinder if calib-dir does not exist.  Done to try to
detect mount failures on the mon nodes.

Tag: V00-02-78
2016-06-13 Mikhail S. Dubrovin
- force all methods to return mask of dtype=np.uint8
M       src/GlobalUtils.py
M       src/SegGeometryCspad2x1V1.py
M       src/SegGeometryEpix100V1.py
M       src/SegGeometryMatrixV1.py

Tag: V00-02-77
2016-06-06 Mikhail S. Dubrovin
- GeometryAccess.py/h/cpp - add methods get_pixel_xy_at_z, get_pixel_xy_inds_at_z PSAS-148

Tag: V00-02-76
2016-05-18 Mikhail S. Dubrovin
- correct comments for word "bond"

Tag: V00-02-75
2016-05-18 Mikhail S. Dubrovin
- GlobalUtils.py - add methods mask_neighbors, mask_edges and their tests.

Tag: V00-02-74
2016-05-17 Mikhail S. Dubrovin
- Add mask of eight neighbours of unbound pixel if mbits += 16
M       src/GeometryAccess.py
M       src/GeometryObject.py
M       src/SegGeometryCspad2x1V1.py

Tag: V00-02-73
2016-05-05 Mikhail S. Dubrovin
- CalibFileFinder.make_calib_file_name - add protection, create subdirectory, change signature PSAS-148
- GlobalUtils.py - add method create_directory

Tag: V00-02-72
2016-05-05 Mikhail S. Dubrovin